used localStorage hooks for cartItems, fixed secondary-images alignment in desktop

--- a/src/components/custom-cta/custom-cta.styles.scss
+++ b/src/components/custom-cta/custom-cta.styles.scss
@@ -88,6 +88,7 @@
       right: 15px;
       width: 8px;
       border: 1px solid $clr-orange-dark;
+      background-color: $clr-orange-dark;
     }
 
     &::before {
