--- a/src/components/secondary-images/secondary-images.styles.scss
+++ b/src/components/secondary-images/secondary-images.styles.scss
@@ -29,9 +29,8 @@
       
     }
     
-    @media only screen and (min-width: 62.5em) {
-      
-      gap: 1.1875rem;
+    @media only screen and (min-width: 62.5em) {     
+      gap: 2rem;
     }
   }
 
